# ner

./: .gitignore  README.md  data.ipynb  genip.ipynb  model.ipynb  pyproject.toml  results.txt  testdoc.txt
data/: .gitignore
models/: .gitignore
ner/: datagen.py  ipgen.py  urlgen.py
sample_templates/: company.txt  domain-log.txt  domain.txt  email-log.txt  email.txt  ip-log.txt  ip.txt  url-log.txt  url.txt
