[tool.poetry]
name = "ner"
version = "0.1.0"
description = ""
authors = ["Keath Milligan <keath.milligan@inquest.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.1"
ipykernel = "^6.29.5"
dask = {extras = ["dataframe"], version = "^2024.12.1"}
dask-expr = "^1.1.21"
faker = "^33.1.0"
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
